[upstream-update] Add our own LLVM global context now that llvm::getGlobalContext() was removed upstream.
Swift relies on this for now. So create our own. This makes more sense
than trying to add back in the API (which is dead besides the c api) or
use the c api itself. We should probably consider not using a global
context like this.

--- a/lib/Basic/CMakeLists.txt
+++ b/lib/Basic/CMakeLists.txt
@@ -69,6 +69,7 @@ add_swift_library(swiftBasic STATIC
   FileSystem.cpp
   JSONSerialization.cpp
   LangOptions.cpp
+  LLVMContext.cpp
   Platform.cpp
   PrefixMap.cpp
   PrettyStackTrace.cpp
